Added support for Mod Menu, changed some commands around, bug fixes.

--- a/build.gradle
+++ b/build.gradle
@@ -11,11 +11,14 @@ base {
 }
 
 repositories {
-	// Add repositories to retrieve artifacts from in here.
-	// You should only use this when depending on other mods because
-	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
-	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
-	// for more information about repositories.
+	maven {
+		name = "Terraformers"
+		url = "https://maven.terraformersmc.com/"
+	}
+	maven {
+		name = "shedaniel"
+		url = "https://maven.shedaniel.me/"
+	}
 }
 
 fabricApi {
@@ -32,6 +35,15 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
+	// Mod Menu. Optional but highly recommend as you can adjust all settings.
+	modImplementation("com.terraformersmc:modmenu:${project.modmenu_version}")
+
+	// Cloth Config. For the mod menu screen.
+	modImplementation("me.shedaniel.cloth:cloth-config-fabric:${project.clothconfig_version}")
+
+	// GSON. For the mod config
+	modImplementation("com.google.code.gson:gson:${project.gson_version}")
 	
 }
 
