--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,6 @@ archives_base_name=lifestealmod
 
 # Dependencies
 fabric_version=0.114.0+1.21.4
+modmenu_version=13.0.0-beta.1
+clothconfig_version=17.0.144
+gson_version=2.11.0
